<resources>
    <string name="app_name">GameCentre</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="welcome_message">Welcome to Game Center!</string>
    <string name="sign_in_message">Please sign in</string>
    <string name="sign_in_enter_button">Continue</string>
    <string name="sign_in_username">Username</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_up_message">Please enter username and password</string>
    <string name="choose_game_menu_message">Choose from the following game(s)</string>
    <string name="choose_game_menu_slidingtiles">Sliding Tiles</string>
    <string name="dashboard_menu_play_game">Play Game</string>
    <string name="choose_game_menu_dashboard">View Dashboard</string>
    <string name="_3x3_tile">3x3 Tile</string>
    <string name="please_ignore">please ignore</string>
    <string name="temporary_complexity_shortcut">temporary complexity shortcut</string>
    <string name="title_activity_sliding_tile_saved_picture">SlidingTileSavedPictureActivity
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="_3">3</string>
    <string name="enter">Enter</string>
    <string name="save">Save</string>
    <string name="undo">Undo</string>
    <string name="choose_game">Choose Game</string>
    <string name="scoreboard">ScoreBoard</string>
    <string name="sliding_tile_score">Sliding Tile Score</string>
    <string name="default_picture">Default Picture</string>
    <string name="choose_picture_from_device_or_web">Choose picture from device or WEB</string>
    <string name="choose_from_predefined_set">Choose from predefined set</string>
    <string name="select_or_download_image">Select or Download Image</string>
    <string name="Android_picture">Android picture</string>
    <string name="welcome_to_sliding_tiles_n_a_puzzle_game_where_you_must_arrange_the_numbers_in_the_correct_order">Welcome To Sliding Tiles   A Puzzle Game where you must arrange the numbers in the correct order</string>
    <string name="new_game">New Game</string>
    <string name="load_saved_game">Load Saved Game</string>
    <string name="continue_game">Continue Game</string>
    <string name="_3x3_board">3x3 board</string>
    <string name="_4x4_board">4x4 board</string>
    <string name="_5x5_board">5x5 board</string>
    <string name="choose_second_picture">Choose second picture</string>
    <string name="choose_first_picture">Choose first picture</string>
    <string name="choose_third_picture">Choose third picture</string>
    <string name="log_out_button">Log Out</string>
    <string name="textview">TextView</string>
    <string name="update">Update</string>
    <string name="back_to_game_menu">Back to Game Menu</string>
    <string name="you_win">YOU Win!</string>
    <string name="prove_you_re_not_a_robot_finish_the_game">Prove you\'re not a robot, finish the game!</string>
    <string name="default_image">Default Image</string>
    <string name="hard">HARD</string>
    <string name="game_over">GAME OVER</string>
</resources>
