<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fall2018.csc2017.GameCentre.HangmanStartingActivity">

    <TextView
        android:id="@+id/GameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="Welcome to Hangman!"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <Button
        android:id="@+id/btnHangManNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameText"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/btnHangManLoad"
        android:text="@string/new_game" />

    <Button
        android:id="@+id/btnHangManLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameText"
        android:layout_toStartOf="@+id/NewGameButton"
        android:text="@string/load_saved_game" />

    <Button
        android:id="@+id/btnHangManContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameText"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/btnHangManNewGame"
        android:text="@string/continue_game" />

</RelativeLayout>