<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetUndoActivity">

    <EditText
        android:id="@+id/txtSetUndo"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSetUndo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="86dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="217dp"
        android:ems="10"
        android:hint="@string/sign_in_password"
        android:inputType="text"
        android:text="@string/_3"
        android:autofillHints=""
        android:visibility="visible" />


    <Button
        android:id="@+id/btnSetUndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUndo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/enter" />

    <TextView
        android:id="@+id/txtUndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="91dp"
        android:text="Set the maximum number of undos allowed\nWrite unlimited for unlimited number of undos.\nBy default you can undo upto 3 times.\nLeaving the text box blank is equivalent to writing 0."
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:visibility="visible" />
</RelativeLayout>